# strands-agents-demo

./: package.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
cdk/: package.json
python/: pyproject.toml
python/src/: 1_agent.py  2_tool.py  3_stm.py  4_ltm.py  5_steering.py
python/src/agentcore/: backend.py  requirements.txt
src/: index.ts
typescript/: README.md  package.json
typescript/src/: index.ts
